<resources>
    <string name="app_name">Assignment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="latest">Latest</string>
    <string name="gif">GIFs</string>
    <string name="more">MORE</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorites</string>

    <!-- about -->
    <string name="hd_wallpaper">HD Wallpaper</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="ompany">Company</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_detail_wallpaper">DetailWallpaperActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
