<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcf2f2f2"
    tools:context=".activity.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:layout_alignParentTop="true"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:theme="@style/ToolbarColoredBackArrow"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
            <android.support.v7.widget.CardView
                android:id="@+id/cardHeader"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/toolbar"
                android:layout_margin="10dp"
                android:elevation="5dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/appHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgLogo"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_margin="10dp"
                            android:src="@mipmap/ic_logo_about" />

                        <TextView
                            android:id="@+id/tvAppName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/imgLogo"
                            android:text="@string/hd_wallpaper"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/appVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/appHeader">

                        <ImageView
                            android:id="@+id/imgVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/version" />

                        <TextView
                            android:id="@+id/tvtextVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/imgVersion"
                            android:text="@string/version"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvtextVersion"
                            android:layout_toRightOf="@+id/imgVersion"
                            android:text="1.1.1)"
                            android:textColor="#453f3f" />
                    </RelativeLayout>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardHeader"
                android:layout_margin="10dp"
                android:elevation="5dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textColor="@android:color/black"

                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_user" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ompany"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvAuthor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Viavi webtech" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_email" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="info@viaviweb.com" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_contact" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contact"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvContact"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="+91 (123) (546) (2968)" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/carInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardAuthor"
                android:layout_margin="10dp"
                android:elevation="5dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDecription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="About company" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>